syntax = "proto3";

package shortener;
option go_package = "/proto";

// -----------------Link service-----------------

service LinkService {
    rpc GetLink(GetLinkRequest) returns (Link) {}
}

message GetLinkRequest {
    string hash = 1;
}

message Link {
    string url = 1;
}
